# chinese-flashcards-01

./: Cargo.toml  README.md  index.html
src/: cards.json  main.rs
src/decks/: CHN203.json  COLLECTION.json  HSK1.json  HSK2.json  HSK3.json  HSK4.json
