[package]
name = "chinese_flashcards"
version = "0.1.0"
edition = "2021"

[dependencies]
# Yew (WebAssembly + CSR)
yew = { version = "0.20", features = ["csr"] }

# Rand for shuffling
rand = "0.8"

# Serde/JSON for cards.json parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# web-sys for DOM types
web-sys = { version = "0.3", features = ["HtmlSelectElement", "HtmlInputElement"] }

# Force getrandom → wasm support via the "js" feature
getrandom = { version = "0.2", features = ["js"] }
