[package]
name = "chinese_flashcards"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.20", features = ["csr"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
web-sys = { version = "0.3", features = ["HtmlSelectElement", "HtmlInputElement", "HtmlElement"] }

# Ensure getrandom uses the JS backend on wasm:
getrandom = { version = "0.2", default-features = false, features = ["js"] }
